--- a/glossary.tex
+++ b/glossary.tex
@@ -15,4 +15,14 @@
 \newabbreviation{pdf}{PDF}{probability density function}
 \newabbreviation{cdf}{CDF}{cumulative distribution function}
 
+% ontology
+\newglossaryentry{ontology}{%
+  name=ontology,
+  description={%
+    Ontology is the study of being, existence and reality. In computer science and
+    information science, an ontology is a formal naming and definition of the types,
+    properties, and interrelationships of the entities that really or fundamentally exist
+    for a particular domain.}
+}
+
 \makeglossaries
