--- a/references.bib
+++ b/references.bib
@@ -417,3 +417,14 @@ isbn="978-3-319-17091-6"
   pages="40--51",
   isbn="978-4-431-65950-1"
 }
+
+@book{CategoriesUnesp,
+  author = {Aristóteles},
+  title = {Categorias. ΚΑΤΗΓΟΡIΑΙ},
+  translator = {José Veríssimo Teixeira da Mata},
+  language = {greek and portuguese},
+  publisher = {Editora Unesp},
+  location = {São Paulo, Brasil},
+  date = {2019},
+  isbn = {978-85-393-0785-2},
+}
