--- a/history.tex
+++ b/history.tex
@@ -679,4 +679,4 @@ theory is based on the concept of statistical invariants, which are properties o
 the data that are preserved under transformations.  The theory is the foundation of the
 learning from intelligent teachers paradigm.  They regard the \gls{lusi} theory as the
 next step in the evolution of learning theory, calling it the ``complete statistical
-theory of learning''.
+theory of learning.''
