--- a/data.tex
+++ b/data.tex
@@ -1244,6 +1244,27 @@ units to the remaining of the attributes.  They also should never be feed into a
 machine (more details in \cref{chap:slt}), since they are individual and thus not
 appropriate to generalize.
 
+\begin{tablebox}[label=fig:bridge]{Terms in different contexts.}
+  \centering
+  \rowcolors{2}{black!10!white}{}
+  \begin{tabular}{ccc}
+    \toprule
+    \textbf{Relational theory} & \textbf{Tidy data} & \textbf{Philosophy} \\
+    \midrule
+    Entities & Observational units & Substance \\
+    Primary key & Fixed variables & - \\
+    Attribute & Attribute & Predicate \\
+    Tuple & Observation & Primary substance \\
+    \bottomrule
+  \end{tabular}
+  \tcblower
+  Equivalence (or similiarity) of data-related terms in different contexts.
+  The ontological understanding of the data influences the way it is organized.
+\end{tablebox}
+
+\Cref{fig:bridge} summarizes the equivalence (or similarity) of terms in different
+contexts.
+
 Consider the following example.  We want to study the \emph{phenomenon} temperature in a
 certain city.  We fix three sensors in different locations to measure the temperature.  We
 collect data three times a day.  If we consider as the observational unit the
